fix scroll on small screens on user_feed

--- a/app/assets/stylesheets/editor-3/public.scss
+++ b/app/assets/stylesheets/editor-3/public.scss
@@ -86,3 +86,11 @@
     border-radius: 0;
   }
 }
+
+@media (max-width: 759px) {
+  body {
+    position: fixed !important;
+    width: 100%;
+    overflow: hidden; // Avoid scroll in small screens
+  }
+}
